--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - pip3 install -r requirements.txt
 
-script: pytest --cov=app/tests/
+script: coverage run --source=app -m pytest && coverage report
 
 after_success: coveralls
 
